gen/MedicalSmartGlassesParser.py
# Generated from MedicalSmartGlassesParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MedicalSmartGlassesParser ( Parser ):

    grammarFileName = "MedicalSmartGlassesParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'frame'", "'continue'", 
                     "'turn'", "'on'", "'off'", "'display'", "'start'", 
                     "<INVALID>", "'accept'", "'leave'", "'mode'", "'emergency'", 
                     "'switch'", "<INVALID>", "'to'", "'messages'", "'of'", 
                     "'last'", "<INVALID>", "'day'", "'hour'", "'minute'", 
                     "'s'", "'set'", "'note'", "'documentation'", "'medication'", 
                     "'and'", "'at'", "'oclock'", "'pm'", "'am'", "'change'", 
                     "'patient'", "'new'", "'message'", "'send'", "'it'", 
                     "<INVALID>", "'please'", "'the'", "'a'", "'i want to'" ]

    symbolicNames = [ "<INVALID>", "TRIGGER", "STOP", "FRAME", "CONTINUE", 
                      "TURN", "ON", "OFF", "DISPLAY", "START", "FINISH", 
                      "ACCEPT", "LEAVE", "MODE", "EMERGENCY", "SWITCH", 
                      "SHOW", "TO", "MESSAGES", "OF", "LAST", "TIME_UNIT", 
                      "DAY", "HOUR", "MINUTE", "S", "SET", "NOTE", "DOCUMENTATION", 
                      "MEDICATION", "AND", "AT", "OCLOCK", "PM", "AM", "CHANGE", 
                      "PATIENT", "NEW", "MESSAGE", "SEND", "IT", "WS", "PLEASE", 
                      "THE", "A", "I_WANT_TO", "INT", "WORD" ]

    RULE_command = 0
    RULE_glasses_command = 1
    RULE_frame = 2
    RULE_switch = 3
    RULE_emergency = 4
    RULE_emergency_launch = 5
    RULE_emergency_acceptation = 6
    RULE_request_data = 7
    RULE_protocol = 8
    RULE_set_medication = 9
    RULE_request_patient = 10
    RULE_message = 11
    RULE_u01 = 12
    RULE_u02 = 13
    RULE_u03 = 14
    RULE_u04 = 15
    RULE_u09 = 16
    RULE_u10 = 17
    RULE_u11 = 18
    RULE_u12 = 19
    RULE_u13 = 20
    RULE_u14 = 21
    RULE_u15 = 22
    RULE_u16 = 23
    RULE_u17 = 24
    RULE_u18 = 25
    RULE_u19 = 26
    RULE_u20 = 27
    RULE_data = 28
    RULE_interval = 29
    RULE_time = 30
    RULE_note = 31
    RULE_trig_medication = 32
    RULE_medications = 33
    RULE_medication = 34
    RULE_medicine = 35
    RULE_unit = 36
    RULE_timestamp = 37
    RULE_patient_name = 38
    RULE_trig_message = 39

    ruleNames =  [ "command", "glasses_command", "frame", "switch", "emergency", 
                   "emergency_launch", "emergency_acceptation", "request_data", 
                   "protocol", "set_medication", "request_patient", "message", 
                   "u01", "u02", "u03", "u04", "u09", "u10", "u11", "u12", 
                   "u13", "u14", "u15", "u16", "u17", "u18", "u19", "u20", 
                   "data", "interval", "time", "note", "trig_medication", 
                   "medications", "medication", "medicine", "unit", "timestamp", 
                   "patient_name", "trig_message" ]

    EOF = Token.EOF
    TRIGGER=1
    STOP=2
    FRAME=3
    CONTINUE=4
    TURN=5
    ON=6
    OFF=7
    DISPLAY=8
    START=9
    FINISH=10
    ACCEPT=11
    LEAVE=12
    MODE=13
    EMERGENCY=14
    SWITCH=15
    SHOW=16
    TO=17
    MESSAGES=18
    OF=19
    LAST=20
    TIME_UNIT=21
    DAY=22
    HOUR=23
    MINUTE=24
    S=25
    SET=26
    NOTE=27
    DOCUMENTATION=28
    MEDICATION=29
    AND=30
    AT=31
    OCLOCK=32
    PM=33
    AM=34
    CHANGE=35
    PATIENT=36
    NEW=37
    MESSAGE=38
    SEND=39
    IT=40
    WS=41
    PLEASE=42
    THE=43
    A=44
    I_WANT_TO=45
    INT=46
    WORD=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRIGGER(self):
            return self.getToken(MedicalSmartGlassesParser.TRIGGER, 0)

        def EOF(self):
            return self.getToken(MedicalSmartGlassesParser.EOF, 0)

        def glasses_command(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.Glasses_commandContext,0)


        def request_data(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.Request_dataContext,0)


        def protocol(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.ProtocolContext,0)


        def set_medication(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.Set_medicationContext,0)


        def request_patient(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.Request_patientContext,0)


        def message(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.MessageContext,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = MedicalSmartGlassesParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MedicalSmartGlassesParser.TRIGGER)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 81
                self.glasses_command()
                pass

            elif la_ == 2:
                self.state = 82
                self.request_data()
                pass

            elif la_ == 3:
                self.state = 83
                self.protocol()
                pass

            elif la_ == 4:
                self.state = 84
                self.set_medication()
                pass

            elif la_ == 5:
                self.state = 85
                self.request_patient()
                pass

            elif la_ == 6:
                self.state = 86
                self.message()
                pass


            self.state = 89
            self.match(MedicalSmartGlassesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glasses_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def frame(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.FrameContext,0)


        def switch(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.SwitchContext,0)


        def emergency(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.EmergencyContext,0)


        def u19(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U19Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_glasses_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlasses_command" ):
                listener.enterGlasses_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlasses_command" ):
                listener.exitGlasses_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlasses_command" ):
                return visitor.visitGlasses_command(self)
            else:
                return visitor.visitChildren(self)




    def glasses_command(self):

        localctx = MedicalSmartGlassesParser.Glasses_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_glasses_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 4]:
                self.state = 91
                self.frame()
                pass
            elif token in [5]:
                self.state = 92
                self.switch()
                pass
            elif token in [9, 10, 11, 12]:
                self.state = 93
                self.emergency()
                pass
            elif token in [15, 16]:
                self.state = 94
                self.u19()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FrameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u01(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U01Context,0)


        def u02(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U02Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_frame

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrame" ):
                listener.enterFrame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrame" ):
                listener.exitFrame(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrame" ):
                return visitor.visitFrame(self)
            else:
                return visitor.visitChildren(self)




    def frame(self):

        localctx = MedicalSmartGlassesParser.FrameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_frame)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 97
                self.u01()
                pass
            elif token in [4]:
                self.state = 98
                self.u02()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u03(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U03Context,0)


        def u04(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U04Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_switch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitch" ):
                listener.enterSwitch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitch" ):
                listener.exitSwitch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitch" ):
                return visitor.visitSwitch(self)
            else:
                return visitor.visitChildren(self)




    def switch(self):

        localctx = MedicalSmartGlassesParser.SwitchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_switch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 101
                self.u03()
                pass

            elif la_ == 2:
                self.state = 102
                self.u04()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmergencyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def emergency_launch(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.Emergency_launchContext,0)


        def emergency_acceptation(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.Emergency_acceptationContext,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_emergency

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmergency" ):
                listener.enterEmergency(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmergency" ):
                listener.exitEmergency(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmergency" ):
                return visitor.visitEmergency(self)
            else:
                return visitor.visitChildren(self)




    def emergency(self):

        localctx = MedicalSmartGlassesParser.EmergencyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_emergency)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10]:
                self.state = 105
                self.emergency_launch()
                pass
            elif token in [11, 12]:
                self.state = 106
                self.emergency_acceptation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Emergency_launchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u09(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U09Context,0)


        def u10(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U10Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_emergency_launch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmergency_launch" ):
                listener.enterEmergency_launch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmergency_launch" ):
                listener.exitEmergency_launch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmergency_launch" ):
                return visitor.visitEmergency_launch(self)
            else:
                return visitor.visitChildren(self)




    def emergency_launch(self):

        localctx = MedicalSmartGlassesParser.Emergency_launchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_emergency_launch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.state = 109
                self.u09()
                pass
            elif token in [10]:
                self.state = 110
                self.u10()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Emergency_acceptationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u11(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U11Context,0)


        def u12(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U12Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_emergency_acceptation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmergency_acceptation" ):
                listener.enterEmergency_acceptation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmergency_acceptation" ):
                listener.exitEmergency_acceptation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmergency_acceptation" ):
                return visitor.visitEmergency_acceptation(self)
            else:
                return visitor.visitChildren(self)




    def emergency_acceptation(self):

        localctx = MedicalSmartGlassesParser.Emergency_acceptationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_emergency_acceptation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 113
                self.u11()
                pass
            elif token in [12]:
                self.state = 114
                self.u12()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Request_dataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u13(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U13Context,0)


        def u14(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U14Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_request_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequest_data" ):
                listener.enterRequest_data(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequest_data" ):
                listener.exitRequest_data(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequest_data" ):
                return visitor.visitRequest_data(self)
            else:
                return visitor.visitChildren(self)




    def request_data(self):

        localctx = MedicalSmartGlassesParser.Request_dataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_request_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 117
                self.u13()
                pass

            elif la_ == 2:
                self.state = 118
                self.u14()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProtocolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u15(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U15Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_protocol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProtocol" ):
                listener.enterProtocol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProtocol" ):
                listener.exitProtocol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProtocol" ):
                return visitor.visitProtocol(self)
            else:
                return visitor.visitChildren(self)




    def protocol(self):

        localctx = MedicalSmartGlassesParser.ProtocolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_protocol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.u15()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_medicationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u16(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U16Context,0)


        def u17(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U17Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_set_medication

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_medication" ):
                listener.enterSet_medication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_medication" ):
                listener.exitSet_medication(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet_medication" ):
                return visitor.visitSet_medication(self)
            else:
                return visitor.visitChildren(self)




    def set_medication(self):

        localctx = MedicalSmartGlassesParser.Set_medicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_set_medication)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 123
                self.u16()
                pass

            elif la_ == 2:
                self.state = 124
                self.u17()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Request_patientContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u18(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U18Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_request_patient

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequest_patient" ):
                listener.enterRequest_patient(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequest_patient" ):
                listener.exitRequest_patient(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequest_patient" ):
                return visitor.visitRequest_patient(self)
            else:
                return visitor.visitChildren(self)




    def request_patient(self):

        localctx = MedicalSmartGlassesParser.Request_patientContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_request_patient)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.u18()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def u20(self):
            return self.getTypedRuleContext(MedicalSmartGlassesParser.U20Context,0)


        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_message

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessage" ):
                listener.enterMessage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessage" ):
                listener.exitMessage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMessage" ):
                return visitor.visitMessage(self)
            else:
                return visitor.visitChildren(self)




    def message(self):

        localctx = MedicalSmartGlassesParser.MessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_message)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.u20()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class U01Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STOP(self):
            return self.getToken(MedicalSmartGlassesParser.STOP, 0)

        def FRAME(self):
            return self.getToken(MedicalSmartGlassesParser.FRAME, 0)

        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_u01

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU01" ):
                listener.enterU01(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU01" ):
                listener.exitU01(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitU01" ):
                return visitor.visitU01(self)
            else:
                return visitor.visitChildren(self)




    def u01(self):

        localctx = MedicalSmartGlassesParser.U01Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_u01)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MedicalSmartGlassesParser.STOP)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 132
                self.match(MedicalSmartGlassesParser.FRAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class U02Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(MedicalSmartGlassesParser.CONTINUE, 0)

        def FRAME(self):
            return self.getToken(MedicalSmartGlassesParser.FRAME, 0)

        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_u02

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU02" ):
                listener.enterU02(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU02" ):
                listener.exitU02(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitU02" ):
                return visitor.visitU02(self)
            else:
                return visitor.visitChildren(self)




    def u02(self):

        localctx = MedicalSmartGlassesParser.U02Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_u02)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(MedicalSmartGlassesParser.CONTINUE)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 136
                self.match(MedicalSmartGlassesParser.FRAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class U03Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TURN(self):
            return self.getToken(MedicalSmartGlassesParser.TURN, 0)

        def OFF(self):
            return self.getToken(MedicalSmartGlassesParser.OFF, 0)

        def DISPLAY(self):
            return self.getToken(MedicalSmartGlassesParser.DISPLAY, 0)

        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_u03

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU03" ):
                listener.enterU03(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU03" ):
                listener.exitU03(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitU03" ):
                return visitor.visitU03(self)
            else:
                return visitor.visitChildren(self)




    def u03(self):

        localctx = MedicalSmartGlassesParser.U03Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_u03)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MedicalSmartGlassesParser.TURN)
            self.state = 140
            self.match(MedicalSmartGlassesParser.OFF)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 141
                self.match(MedicalSmartGlassesParser.DISPLAY)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class U04Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TURN(self):
            return self.getToken(MedicalSmartGlassesParser.TURN, 0)

        def ON(self):
            return self.getToken(MedicalSmartGlassesParser.ON, 0)

        def DISPLAY(self):
            return self.getToken(MedicalSmartGlassesParser.DISPLAY, 0)

        def getRuleIndex(self):
            return MedicalSmartGlassesParser.RULE_u04

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU04" ):
                listener.enterU04(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU04" ):
                listener.exitU04(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitU04" ):
                return visitor.visitU04(self)
            else:
                return visitor.visitChildren(self)




    def u04(self):
